--- a/계산기.html
+++ b/계산기.html
@@ -11,36 +11,127 @@
 
 <script>
   var flag = 0;
-  
+  var last_n = 0;
+  var last_s = '';
+  var calflag = 0;
+  var before = 0;
+
   function cal() { // = 입력시 계산
+    if(flag == 1){
+      //alert(1 + '\n' + flag + '\n' + numbers + '\n' + sachic + '\n' + calflag)
+      var cal_result;
+      switch(last_s){
+        case '+':
+          cal_result = +(parseFloat(numbers) + parseFloat(last_n)).toFixed(12);
+          break;
+        case '-':
+          cal_result = +(parseFloat(numbers) - parseFloat(last_n)).toFixed(12);
+          break;
+        case '*':
+          cal_result = +(parseFloat(numbers) * parseFloat(last_n)).toFixed(12);
+          break;
+        case '/':
+          cal_result = +(parseFloat(numbers) / parseFloat(last_n)).toFixed(12);
+          break;
+        default:
+          alert('switch error1' + '\n' + thing + '\n' + before);
+      }
+      screen.innerText = cal_result;
+      full.innerText = '☞'+numbers[0] + last_s + last_n;
+      numbers = new Array();
+      numbers.push(cal_result);
+      num = '';
+      flag = 1;
+      calflag = 1;
+      //alert(flag +'\n'+ calflag +'\n'+ numbers);
+    }
+    else{
+      //alert(sachic + '\n' + before)
+      //alert(2 + '\n' + flag + '\n' + numbers + '\n' + sachic + '\n' + calflag)
+      last_n = screen.innerText;
+      last_s = sachic[0];
+      var cal_result;
+      switch(sachic[0]){
+        case '+':
+          cal_result = +(parseFloat(numbers[0]) + parseFloat(screen.innerText)).toFixed(12);
+          break;
+        case '-':
+          cal_result = +(parseFloat(numbers[0]) - parseFloat(screen.innerText)).toFixed(12);
+          break;
+        case '*':
+          cal_result = +(parseFloat(numbers[0]) * parseFloat(screen.innerText)).toFixed(12);
+          break;
+        case '/':
+          cal_result = +(parseFloat(numbers[0]) / parseFloat(screen.innerText)).toFixed(12);
+          break;
+        default:
+          alert('switch error2' + '\n' + thing + '\n' + before);
+      }
+      screen.innerText = cal_result;
+      full.innerText = '☞';
+      numbers = new Array();
+      numbers.push(cal_result);
+      sachic = new Array();
+      input = '';
+      flag = 1;
+      calflag = 0;
+      //alert(flag + '\n' + numbers + '\n' + sachic + '\n' + calflag)
+    }
   }
 
   function SACHIC(thing) { // 나머지 사칙연산
-    if((screen.innerText == '0' && thing == '-') || screen.innerText == '-'){
+    if((screen.innerText == '0' && thing == '-') || screen.innerText == '-'){ // 맨 처음 음수
       screen.innerText = '-';
       input = '-';
       flag = 1;
+      before = 1;
       return 0;
     }
 
-    if(flag == 1){ // 부호만 바꿀 때
+    if(flag == 1 && screen.innerText != 0 && calflag != 1 && sachic.length !=0 ){ // 부호만 바꿀 때
       sachic[sachic.length-1] = thing;
       full.innerText = full.innerText.substring(0, full.innerText.length-1);
       full.innerText += thing;
       input = '';
+      before = 2;
     }
-    else{ // 부호가 아니고 새로 넣을 때
+
+    else if(calflag == 1){ // cal 돌고 왔을때
+      sachic.push(thing);
+      //full.innerText = full.innerText.substring(0, full.innerText.length-1);
+      full.innerText = '☞'+numbers[0];
+      full.innerText += thing;
+      input = '';
+      calflag = 0;
+      before = 3;
+    }
+
+    else if(flag == 1 && numbers.length != 0){ // 계산하다가 = 입력 후
+      full.innerText += screen.innerText+thing;
+      //numbers.push(screen.innerText);
+      sachic.push(thing);
+      input = '';
+      flag = 1;
+      //alert(flag + '\n' + numbers + '\n' + sachic + '\n' + calflag)
+      before = 4;
+    }
+
+    else{ // 부호가 아니고 넣을 때
       if(screen.innerText[screen.innerText.length-1]=='.'){
         screen.innerText = screen.innerText.replace('.','');
       }
       numbers.push(screen.innerText);
       sachic.push(thing);
       full.innerText += screen.innerText+thing;
+      last_n = screen.innerText;
+      last_s = thing;
       input = '';
       flag = 1;
+      before = 5;
     }
 
     if(numbers.length>=2){ // 집어넣었는데 넘버가 두개 이상일 때 = 계산
+      //alert(3 + '\n' + flag + '\n' + numbers + '\n' + sachic + '\n' + calflag)
       var sachic_result;
       const first = numbers[0];
       const second = numbers[1];
@@ -62,15 +153,46 @@
           sachic_result = +(parseFloat(first) / parseFloat(second)).toFixed(12);
           break;
         default:
-          alert('switch error');
+          alert('switch error3' + '\n' + thing + '\n' + before);
       }
       screen.innerText = sachic_result;
       numbers.push(sachic_result);
       sachic.push(second_s);
       flag = 1;
       num = '';
-    } 
+      before = 6;
+    }
 
+    if(pmflag == 1){ // 음수 누르고 바로계산 할 때
+      var sachic_result;
+      const first = numbers[0];
+      const second = screen.innerText;
+      numbers = new Array();
+      const first_s = sachic[0];
+      sachic = new Array();
+      switch(first_s){
+        case '+':
+          sachic_result = +(parseFloat(first) + parseFloat(second)).toFixed(12);
+          break;
+        case '-':
+          sachic_result = +(parseFloat(first) - parseFloat(second)).toFixed(12);
+          break;
+        case '*':
+          sachic_result = +(parseFloat(first) * parseFloat(second)).toFixed(12);
+          break;
+        case '/':
+          sachic_result = +(parseFloat(first) / parseFloat(second)).toFixed(12);
+          break;
+        default:
+          alert('switch error4' + '\n' + thing + '\n' + before);
+      }
+      screen.innerText = sachic_result;
+      numbers.push(sachic_result);
+      sachic.push(first_s);
+      flag = 1;
+      num = '';
+      pmflag=0;
+    }
   }
   
   function CE() { // 현재 숫자만 0으로
@@ -99,13 +221,17 @@
     screen.innerText = '0';
     input = '';
     full.innerText = '☞ ';
+    calflag = 0;
+    flag = 0;
   }
 
+  var pmflag=0;
   function PM(){ // 현재 숫자 음수로
     if(screen.textContent!=0){
       screen.innerText *= -1
-      input = screen.innerText
+      input = screen.innerText;
       flag = 0;
+      pmfalg = 1;
     }
   }
 
@@ -214,7 +340,7 @@
     else if(event.keyCode==107){
       SACHIC(plus.textContent);
     }
-    else if(event.keyCode==109){
+    else if(event.keyCode==109 || event.keyCode==189){
       SACHIC(minus.textContent);
     }
     else if(event.keyCode==106){
