--- a/계산기.html
+++ b/계산기.html
@@ -14,10 +14,13 @@
   var last_n = 0;
   var last_s = '';
   var calflag = 0;
-  var before = 0;
 
   function cal() { // = 입력시 계산
-    if(flag == 1){
+    //alert(flag + '\n' + numbers + '\n' + sachic)
+    if(numbers.length == 0 && sachic.length ==0){
+      // 아무것도 안함
+    }
+    else if(flag == 1){
       //alert(1 + '\n' + flag + '\n' + numbers + '\n' + sachic + '\n' + calflag)
       var cal_result;
       switch(last_s){
@@ -34,19 +37,20 @@
           cal_result = +(parseFloat(numbers) / parseFloat(last_n)).toFixed(12);
           break;
         default:
-          alert('switch error1' + '\n' + thing + '\n' + before);
+          alert('switch error1');
       }
+
       screen.innerText = cal_result;
       full.innerText = '☞'+numbers[0] + last_s + last_n;
       numbers = new Array();
       numbers.push(cal_result);
+      input = '';
       num = '';
       flag = 1;
       calflag = 1;
       //alert(flag +'\n'+ calflag +'\n'+ numbers);
     }
     else{
-      //alert(sachic + '\n' + before)
       //alert(2 + '\n' + flag + '\n' + numbers + '\n' + sachic + '\n' + calflag)
       last_n = screen.innerText;
       last_s = sachic[0];
@@ -65,16 +69,25 @@
           cal_result = +(parseFloat(numbers[0]) / parseFloat(screen.innerText)).toFixed(12);
           break;
         default:
-          alert('switch error2' + '\n' + thing + '\n' + before);
+          alert('switch error2');
       }
+      
+      const line1 = document.createElement('p');
+      line1.innerText = full.innerText + screen.innerText;
+      const line2 = document.createElement('h3');
+      line2.innerText = cal_result;
+      div3.prepend(line2);
+      div3.prepend(line1);
+
       screen.innerText = cal_result;
       full.innerText = '☞';
       numbers = new Array();
       numbers.push(cal_result);
       sachic = new Array();
       input = '';
-      flag = 1;
-      calflag = 0;
+      num = '';
+      flag = 0;
+      calflag = 1;
       //alert(flag + '\n' + numbers + '\n' + sachic + '\n' + calflag)
     }
   }
@@ -84,53 +97,77 @@
       screen.innerText = '-';
       input = '-';
       flag = 1;
-      before = 1;
       return 0;
     }
 
     if(flag == 1 && screen.innerText != 0 && calflag != 1 && sachic.length !=0 ){ // 부호만 바꿀 때
+      alert(1);
       sachic[sachic.length-1] = thing;
       full.innerText = full.innerText.substring(0, full.innerText.length-1);
       full.innerText += thing;
       input = '';
-      before = 2;
     }
 
     else if(calflag == 1){ // cal 돌고 왔을때
-      sachic.push(thing);
-      //full.innerText = full.innerText.substring(0, full.innerText.length-1);
-      full.innerText = '☞'+numbers[0];
-      full.innerText += thing;
-      input = '';
-      calflag = 0;
-      before = 3;
+      alert(2);
+      alert(flag + '\n' + numbers + '\n' + sachic + '\n' + calflag);
+      if(numbers.length == 0 && sachic.length ==0){
+        // 아무것도 안함
+      }
+      else{
+        sachic.push(thing);
+        //full.innerText = full.innerText.substring(0, full.innerText.length-1);
+        if(pmflag == 1){
+          numbers[0] = screen.innerText;
+          //alert(numbers[0]);
+          pmflag = 0;
+        }
+        full.innerText = '☞'+numbers[0];
+        full.innerText += thing;
+        input = '';
+        calflag = 0;
+        flag = 1;
+      }
+
     }
 
     else if(flag == 1 && numbers.length != 0){ // 계산하다가 = 입력 후
+      alert(3);
       full.innerText += screen.innerText+thing;
       //numbers.push(screen.innerText);
       sachic.push(thing);
       input = '';
       flag = 1;
       //alert(flag + '\n' + numbers + '\n' + sachic + '\n' + calflag)
-      before = 4;
     }
 
     else{ // 부호가 아니고 넣을 때
+      alert(4);
       if(screen.innerText[screen.innerText.length-1]=='.'){
         screen.innerText = screen.innerText.replace('.','');
       }
-      numbers.push(screen.innerText);
-      sachic.push(thing);
-      full.innerText += screen.innerText+thing;
-      last_n = screen.innerText;
-      last_s = thing;
-      input = '';
-      flag = 1;
-      before = 5;
+      if(pmflag==1 && numbers.length != 0){
+        numbers[numbers.length-1] = screen.innerText;
+        sachic.push(thing);
+        full.innerText += screen.innerText+thing;
+        last_n = screen.innerText;
+        last_s = thing;
+        input = '';
+        flag = 1;
+      }
+      else{
+        numbers.push(screen.innerText);
+        sachic.push(thing);
+        full.innerText += screen.innerText+thing;
+        last_n = screen.innerText;
+        last_s = thing;
+        input = '';
+        flag = 1;
+      }
     }
 
     if(numbers.length>=2){ // 집어넣었는데 넘버가 두개 이상일 때 = 계산
+      alert(5);
       //alert(3 + '\n' + flag + '\n' + numbers + '\n' + sachic + '\n' + calflag)
       var sachic_result;
       const first = numbers[0];
@@ -153,17 +190,18 @@
           sachic_result = +(parseFloat(first) / parseFloat(second)).toFixed(12);
           break;
         default:
-          alert('switch error3' + '\n' + thing + '\n' + before);
+          alert('switch error3');
       }
       screen.innerText = sachic_result;
       numbers.push(sachic_result);
       sachic.push(second_s);
       flag = 1;
       num = '';
-      before = 6;
     }
 
-    if(pmflag == 1){ // 음수 누르고 바로계산 할 때
+    if(pmflag == 1 && numbers.length == 0){ // 음수 누르고 바로계산 할 때
+      alert(6);
+      //alert(flag + '\n' + numbers + '\n' + sachic + '\n' + calflag)
       var sachic_result;
       const first = numbers[0];
       const second = screen.innerText;
@@ -184,7 +222,7 @@
           sachic_result = +(parseFloat(first) / parseFloat(second)).toFixed(12);
           break;
         default:
-          alert('switch error4' + '\n' + thing + '\n' + before);
+          alert('switch error4');
       }
       screen.innerText = sachic_result;
       numbers.push(sachic_result);
@@ -195,9 +233,16 @@
     }
   }
   
-  function CE() { // 현재 숫자만 0으로
+  function CE() { // 현재 숫자 0으로
+    numbers = new Array();
+    sachic = new Array();
     screen.innerText = '0';
     input = '';
+    num = 0;
+    full.innerText = '☞ ';
+    calflag = 0;
+    flag = 0;
+    pmflag = 0;
   }
 
   var num;
@@ -223,6 +268,11 @@
     full.innerText = '☞ ';
     calflag = 0;
     flag = 0;
+    pmflag = 0;
+
+    while(div3.hasChildNodes()){
+      div3.removeChild(div3.firstChild);
+    }
   }
 
   var pmflag=0;
@@ -231,7 +281,7 @@
       screen.innerText *= -1
       input = screen.innerText;
       flag = 0;
-      pmfalg = 1;
+      pmflag = 1;
     }
   }
 
@@ -253,6 +303,10 @@
   var div2 = document.createElement('div'); 
   document.body.appendChild(div);
   document.body.appendChild(div2);
+
+  //계산저장공간
+  var div3 =  document.createElement('div');
+  document.body.appendChild(div3);
 
   // 사칙연산 버튼
   var plus = document.createElement('button');
@@ -308,9 +362,16 @@
   // 키보드 이벤트
   window.onkeydown = function() {
     if(((event.keyCode>=48) && (event.keyCode<=57)) || ((event.keyCode>=96) && (event.keyCode<=105))){ // 48~57, 96~105
-      if(flag === 1){
+      if(flag == 1){
         screen.innerText = '';
         flag = 0;
+      }
+      if(calflag == 1){
+        screen.innerText = '';
+        numbers = new Array();
+        sachic = new Array();
+        flag = 0;
+        calflag = 0;
       }
       key = event.keyCode;
       if (key == 96){
